[package]
name = "passage"
description = "Password store using age"
license = "GPL-3.0"
version = "0.1.0"
authors = ["Gregory Anders <greg@gpanders.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3"
colored = "2"
age = "0.4"
secrecy = "0.6"
